# GPT-SoVITS-Rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: bert_utils.rs  ffmpeg_api.rs  ffmpeg_utils.rs  main.rs  text_utils.rs
src/text/: chinese.rs  english.rs  mod.rs  symbols.rs  tone_sandhi.rs
src/text/lazy_pinyin/: convert.rs  lazy_pinyin.rs  mmseg.rs  mod.rs  style.rs
src/text/zh_normalization/: chronology.rs  mod.rs  num.rs  opencpop_strict.rs  phonecode.rs  quantifier.rs  text_normalization.rs
